[package]
name = "ipcalc"
version = "1.1.0"
edition = "2021"
authors = ["Allyn Bottorff"]
license = "Apache-2.0"
readme = "README.adoc"
repository = "https://github.com/allyn-bottorff/ipcalc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }


[profile.release]
strip = "symbols"
